tests/fails/f32.t
require("fail")

terra foo()
   var a : int
   return a.b + 4
end
foo()
